[project]
name = "med_mcqa"
description = "Med MCQA evaluation environment"
readme = "README.md"
tags = ["medical", "single-turn", "multiple-choice", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    { name = "Ratna Sagari Grandhi", email = "sagari.grandhi@gmail.com" },
]
dependencies = [
    "verifiers>=0.1.5.post0",
    "medarc_verifiers>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
medarc_verifiers = { git = "https://github.com/MedARC-AI/med-lm-envs" }

[tool.prime.environment]
loader = "med_mcqa:load_environment"
display_name = "MedMCQA"
visibility = "PUBLIC"